hphp/test/zend/bad/zend/bug55705.php
<?php
function f(callable $c) {}
f();
?>